Update title and content of index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+    <title>Image Page</title>
 </head>
-<body>
+<body style="text-align:center; font-family:Arial;">
 
-    <h1>Welcome</h1>
-    <p>This is my simple website.</p>
-    <button onclick="alert('Hello!')">Click Me</button>
+    <h2>My Website</h2>
+    
+    <img src="https://via.placeholder.com/300" alt="Sample Image">
+    
+    <p>This is a simple webpage with an image.</p>
 
 </body>
 </html>
